[package]
name = "vsd"
version = "0.2.0"
description = "Command line program to download HLS and DASH streams"
authors = ["clitic <clitic21@gmail.com>"]
repository = "https://github.com/clitic/vsd"
documentation = "https://docs.rs/vsd"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["m3u8"]
categories = ["command-line-utilities"]
exclude = ["docs", "images"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
glob = "0.3.0"
headless_chrome = "0.9"
iso8601 = "0.5"
kdam = "0.2"
m3u8-rs = "5"
mp4decrypt = "0.2.0"
openssl = "0.10"
quick-xml = { version = "0.24", features = ["serialize"] }
regex = "1"
requestty = "0.5.0"
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
threadpool = "1"

[features]
default = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

# [target.'cfg(windows)'.build-dependencies]
# winres = "0.1"
