[package]
name = "vsd"
version = "0.3.0"
description = "Download video streams served over HTTP from websites, HLS and DASH playlists"
authors = ["clitic <clitic21@gmail.com>"]
repository = "https://github.com/clitic/vsd"
documentation = "https://docs.rs/vsd"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["m3u8"]
categories = ["command-line-utilities"]
exclude = ["docs", "images"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "wrap_help"] }
glob = "0.3"
headless_chrome = { version = "1.0.1", optional = true }
hex = "0.4"
iso8601 = "0.5"
kdam = "0.3"
m3u8-rs = "5"
mp4decrypt = "0.3.1"
openssl = "0.10"
prost = "0.11"
quick-xml = { version = "0.27", features = ["serialize"] }
regex = "1"
requestty = "0.5.0"
reqwest = { version = "0.11", features = ["native-tls", "blocking", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["chrome"]
chrome = ["dep:headless_chrome"]

[build-dependencies]
prost-build = "0.11"
