[package]
authors = ["clitic <clitic21@gmail.com>"]
description = "Source of bento4 and logic to build it."
documentation = "https://docs.rs/bento4-src"
edition = "2021"
license = "MIT OR Apache-2.0"
include = [
    "Bento4/Documents/LICENSE.txt",
    "Bento4/Source/C++/Core/*",
    "Bento4/Source/C++/Codecs/*",
    "Bento4/Source/C++/Crypto/*",
    "Bento4/Source/C++/MetaData/*",
    "Bento4/Source/C++/System/StdC/*",
    "Bento4/Source/C++/System/Win32/Ap4Win32Random.cpp",
    "Bento4/Source/C++/System/Posix/Ap4PosixRandom.cpp",
    "src/*",
    "Cargo.toml",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
]
name = "bento4-src"
readme = "README.md"
repository = "https://github.com/clitic/vsd/tree/main/bento4-src"
version = "0.1.2"

[dependencies]
cc = { version = "1", features = ["parallel"] }
