[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.7", package = "gtk4" }
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
m3u8-rs = "4.0"
openssl = "0.10"
regex = "1.5"
threadpool = "1.0"
kdam = "0.1.7"
headless_chrome = "0.9"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]