[package]
name = "vsd-mp4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
hex = "0.4"
prost = "0.11"
quick-xml = { version = "0.28", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
prost-build = "0.11"
