[package]
authors = ["clitic <clitic21@gmail.com>"]
categories = ["parser-implementations", "parsing"]
description = "Port of mp4 parser from shaka-player project."
documentation = "https://docs.rs/vsd-mp4"
edition = "2024"
keywords = ["mp4"]
license = "MIT OR Apache-2.0"
name = "vsd-mp4"
repository = "https://github.com/clitic/vsd/tree/main/vsd-mp4"
version = "0.1.4"
readme = "README.md"

[dependencies]
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
prost = { version = "0.14", optional = true }
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
prost-build = { version = "0.14", optional = true }

[features]
default = ["pssh", "sidx", "text-ttml", "text-vtt"]
pssh = ["dep:base64", "dep:hex", "dep:prost", "dep:prost-build", "dep:serde"]
sidx = []
text-ttml = ["dep:serde", "dep:quick-xml"]
text-vtt = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
