[package]
authors = ["clitic <clitic21@gmail.com>"]
categories = ["command-line-utilities"]
description = "Download video streams served over HTTP from websites, DASH (.mpd) and HLS (.m3u8) playlists."
documentation = "https://docs.rs/vsd"
edition = "2024"
exclude = ["images"]
keywords = ["m3u8", "mpd"]
license = "MIT OR Apache-2.0"
name = "vsd"
repository = "https://github.com/clitic/vsd/tree/main/vsd"
version = "0.5.0"
readme = "README.md"

[dependencies]
aes = "0.8"
anyhow = "1"
base64 = "0.22"
blake3 = "1.8"
cbc = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "wrap_help"] }
colored = "3"
cookie = "0.18"
dash-mpd = { version = "0.19", default-features = false }
glob = "0.3"
headless_chrome = { version = "1.0.10", optional = true }
hex = "0.4"
iori-ssa = "0.2.0"
log = "0.4"
m3u8-rs = "6.0.0"
mp4decrypt = { version = "0.6.0", path = "../mp4decrypt" }
regex = "1"
requestty = "0.6.3"
reqwest = { version = "0.13", default-features = false, features = [
    "cookies",
    "query",
    "socks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
vsd-mp4 = { version = "0.2.0", path = "../vsd-mp4", features = [
    "pssh",
    "sidx",
    "text-ttml",
    "text-vtt",
] }

[features]
default = ["browser", "rustls"]
browser = ["dep:headless_chrome"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
